[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/ContentController.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/Beon-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/PlayButton.gd" type="Script" id=3]
[ext_resource path="res://UI/ExitButton.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 180
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("ForegroundGoesUp:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 2.99 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ContentController/Title/GameTitle/ForegroundGoesLeft:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.99 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 800, 200 ), Vector2( 220, 200 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ForegroundGoesUp:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ContentController/Title/GameTitle/ForegroundGoesLeft:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackgroundColorWhite" type="ColorRect" parent="."]
margin_right = 1600.0
margin_bottom = 600.0
rect_min_size = Vector2( 1600, 600 )
size_flags_horizontal = 2
size_flags_vertical = 10

[node name="BackgroundColorRed" type="ColorRect" parent="."]
margin_top = 600.0
margin_right = 1600.0
margin_bottom = 900.0
rect_min_size = Vector2( 1600, 300 )
color = Color( 1, 0, 0, 1 )

[node name="ContentController" type="VBoxContainer" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
script = ExtResource( 1 )

[node name="Title" type="CenterContainer" parent="ContentController"]
margin_right = 1600.0
margin_bottom = 584.0
rect_min_size = Vector2( 1600, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameTitle" type="Label" parent="ContentController/Title"]
margin_left = 404.0
margin_top = 184.0
margin_right = 1195.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
text = "Retrace"
align = 1
valign = 1

[node name="ForegroundGoesLeft" type="ColorRect" parent="ContentController/Title/GameTitle"]
margin_right = 220.0
margin_bottom = 200.0

[node name="EmbarkControls" type="CenterContainer" parent="ContentController"]
visible = false
margin_top = 276.0
margin_right = 1600.0
margin_bottom = 584.0

[node name="VBoxContainer" type="VBoxContainer" parent="ContentController/EmbarkControls"]
margin_left = 704.0
margin_right = 895.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="PlayButton" type="Button" parent="ContentController/EmbarkControls/VBoxContainer"]
margin_right = 191.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.839216, 0.619608, 1 )
text = "Embark"
flat = true
script = ExtResource( 3 )

[node name="ExitButton" type="Button" parent="ContentController/EmbarkControls/VBoxContainer"]
margin_top = 104.0
margin_right = 191.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Disembark"
flat = true
script = ExtResource( 4 )

[node name="CreditsButton" type="Button" parent="ContentController/EmbarkControls/VBoxContainer"]
margin_top = 208.0
margin_right = 191.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.839216, 0.619608, 1 )
text = "Credits"
flat = true

[node name="CreditsControls" type="CenterContainer" parent="ContentController"]
margin_top = 588.0
margin_right = 1600.0
margin_bottom = 896.0

[node name="VBoxContainer" type="VBoxContainer" parent="ContentController/CreditsControls"]
margin_left = 483.0
margin_right = 1117.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextButton" type="Button" parent="ContentController/CreditsControls/VBoxContainer"]
margin_right = 634.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.839216, 0.619608, 1 )
text = "Karl Bittner                    Michael Leithner"
flat = true

[node name="TextButton2" type="Button" parent="ContentController/CreditsControls/VBoxContainer"]
margin_top = 104.0
margin_right = 634.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.839216, 0.619608, 1 )
text = "Leon Palluch                    Nino Schmidt"
flat = true

[node name="BackButton" type="Button" parent="ContentController/CreditsControls/VBoxContainer"]
margin_top = 208.0
margin_right = 634.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.839216, 0.619608, 1 )
text = "Back"
flat = true

[node name="Control" type="Control" parent="ContentController"]
margin_top = 900.0
margin_right = 1600.0
margin_bottom = 900.0

[node name="ForegroundGoesUp" type="ColorRect" parent="."]
visible = false
margin_left = -240.0
margin_right = 784.0
margin_bottom = 400.0
rect_rotation = -30.0

[node name="AnimateForeground" type="AnimationPlayer" parent="."]
autoplay = "Text"
anims/Text = SubResource( 4 )
[connection signal="pressed" from="ContentController/EmbarkControls/VBoxContainer/PlayButton" to="ContentController/EmbarkControls/VBoxContainer/PlayButton" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ContentController/EmbarkControls/VBoxContainer/ExitButton" to="ContentController/EmbarkControls/VBoxContainer/ExitButton" method="_on_ExitButton_pressed"]
